ispCP ω 1.0.3 Changelog
~~~~~~~~~~~~~~~~~~~~~~~~~~

2009-08-30 Andreca Daniel
	- ENGINE:
		* Update for ispcp-update
	- GUI:
		* Fixed #1959: Bad characters in changeset r1953
	- LANGUAGES:
		* Updated languages

2009-08-30 Marc Pujol
	- ENGINE:
		* Fixed a race condition bug in the locking code
		* Improved speed of set-engine-permissions
	- GUI:
		* Fixed #1954: GUI/Frontend locking issues

2009-08-28 Andreca Daniel
	- ENGINE:
		* Fixed #1958: Gui Permissions Problem

2009-08-28 Benedikt Heintel
	- TOOLS:
		* Fixed #1921: phpMyAdmin Error (Only Displayed)

2009-08-27 Malte Geierhos
	- CONFIGS:
		* Small Change for Fedora

2009-08-27 Benedikt Heintel
	- DISTS:
		* Fixed #1952: Small patch for opensuse
	- DOCS:
		* Updates all docs

2009-08-27 Andreca Daniel
	- CONFIGS:
		* Update support for Debian Squeeze
	- ENGINE:
		* Update for ispcp-update

2009-08-23 Benedikt Heintel
	- DOCS:
		* Fixed #1936: Remove Support for older Distribution Versions

2009-08-21 Andreca Daniel
	- GUI:
		* Added compatibility for php V5.3
	- TOOLS
		* Fixed #1935: Syntax-Error in /etc/init.d/ispcp_network on Ubuntu (thanks lucasgirod)

2009-08-21 Benedikt Heintel
	- RELEASE ispCP ω Omega 1.0.2
	- TOOLS:
		* Updated SquirrelMail to version 1.4.20RC2
		* Updated Net2FTP version 0.98 to build 45
		* Added new "modern" skin for Net2FTP
		* Added new "mobil" skin for Net2FTP
		* Added new "modern" skin for PHPmyAdmin

2009-08-18 Benedikt Heintel
	- RELEASE ispCP ω Omega 1.0.1 (revoked)

2009-08-18 Andreca Daniel
	- GUI:
		* Fixed #1931: Error when adding/deleting Domain/FTP etc

2009-08-17 Benedikt Heintel
	- GUI:
		* Chagend recalc_reseller_c_props with Thomas Partsch's version
	- TOOLS:
		* Updated SquirrelMail to version 1.4.20RC1

2009-08-14 Malte Geierhos
	- SETUP:
		* Fixed various Bugs preventing RPM Builds ( together with George Machitidze)

2009-08-12 Sebastian Sellmeier
	- GUI:
		* Fixed #1922: Creating User with Domain expire 'never' does not work

2009-08-12 Jochen Manz
	- GUI: